--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-import-resolver-alias": "^1.1.1",
     "install": "^0.12.2",
     "npm": "^6.4.1",
